<resources>

    <!-- PAGE MAIN -->
    <string name="app_name">MadRental</string>
    <string name="title">Mad Rental</string>
    <string name="reservations">Mes reservations</string>
    <string name="profil">Mon profil</string>
    <string name="lancerrecherche">Lancer une recherche</string>
    <string name="debut">Date de début de reservation</string>
    <string name="fin">Date de fin de reservation</string>
    <string name="recherche">Rechercher</string>
    <string name="erreurdate">Entrez une date</string>
    <string name="infoprofil">Créez un profil ! </string>

    <!-- PAGE PROFIL -->
    <string name="renseignement">Merci de renseigner votre profil:</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="datenaissance">Date de naissance</string>
    <string name="valider">Valider</string>
    <string name="erreurnom">Entrez un nom</string>
    <string name="erreurprenom">Entrez un prénom</string>
    <string name="erreurdatenaissance">Entrez une date</string>
    <string name="dateinvalide">Date invalide</string>
    <string name="profilajour">Profil mis à jour</string>



    <!-- PAGE RESERVATION ACTIVITE 2/2 -->
    <string name="demandes">Merci de saisir ici vos demandes spécifiques : </string>
    <string name="message">Votre message...</string>
    <string name="finalPrice">Prix final : </string>
    
</resources>
