<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.ProfilActivity"

    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvProfil"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/renseignement"
                android:textSize="@dimen/renseigementSize"/>



            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nom"
                android:background="@drawable/boutons"
                android:layout_margin="20dp"
                android:paddingLeft="20dp"
                />

            <EditText
                android:id="@+id/et_prenom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/prenom"
                android:paddingLeft="20dp"
                android:background="@drawable/boutons"
                android:layout_margin="20dp"
                />

            <EditText
                android:id="@+id/et_datenaissance"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/datenaissance"
                android:inputType="date"
                android:background="@drawable/boutons"
                android:layout_margin="20dp"
                android:paddingLeft="20dp"
                />
            <Button
                android:id="@+id/btn_valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:onClick="valider"
                android:textAllCaps="false"
                android:background="@drawable/gradient"
                android:textColor="@color/colorWhite"
                android:layout_margin="20dp"
                android:paddingLeft="20dp"/>



        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>